@@ -21,6 +21,20 @@
   <name>Interval Popup</name>
 
   <widget>
+    <class>GtkPixmapMenuItem</class>
+    <name>new_interval</name>
+    <tooltip>Add a new time interval.</tooltip>
+    <signal>
+      <name>activate</name>
+      <handler>on_new_interval_activate</handler>
+      <last_modification_time>Sat, 01 Dec 2001 05:22:34 GMT</last_modification_time>
+    </signal>
+    <label>New Interval</label>
+    <right_justify>False</right_justify>
+    <stock_icon>GNOME_STOCK_MENU_NEW</stock_icon>
+  </widget>
+
+  <widget>
     <class>GtkMenuItem</class>
     <name>edit</name>
     <tooltip>Edit the Start &amp; Stop Times</tooltip>
