@@ -3,6 +3,8 @@ Fri Nov 30 12:26:23 CST 2001 Linas Vepstas <linas@linas.org>
 
 	* proj.h, proj.c, props-invl.c: bug fix for coredump
 	* props-task.c: fix redraw bug
+	* journal.c, task_opup.glade, interval_popup.glade:
+	  add new popup menu entries.
 
 Wed Nov 28 12:12:44 CST 2001 Linas Vepstas <linas@linas.org>
 
